fix ebooks link position

--- a/frontend/templates/ebooks.html
+++ b/frontend/templates/ebooks.html
@@ -19,7 +19,7 @@
             <i class="fas fa-book"></i>
             Ebooks
         </h1>
-        <p class="ebooks-subtitle">Descarga y disfruta de nuestra colección de ebooks sobre bienestar y crecimiento personal</p>
+        <p class="ebooks-subtitle">Descarga y disfruta de nuestra colección de ebooks sobre bienestar y alimentación</p>
     </div>
 </div>
 
