--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -20,10 +20,10 @@
                         <a href="#">
                             Alimentación <span class="submenu-arrow"> > </span>
                         </a>
-                        <ul class="submenu">
-                            <li class="oculto"><a href="#ebook">E-book</a></li>
+                        <ul class="submenu">                            
                             <li><a href="/alimentacion">Asesoramiento individualizado</a></li>
                             <li class="oculto"><a href="#recetas">Recetas</a></li>
+                            <li><a href="/ebooks">Ebooks</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -55,9 +55,7 @@
                     <li>
                         <a href="/eventos-disponibles">Próximos eventos</a>
                     </li>
-                    <li>
-                        <a href="/ebooks">Ebooks</a>
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
