--- a/frontend/templates/alimentacion.html
+++ b/frontend/templates/alimentacion.html
@@ -35,12 +35,12 @@
                 <div class="agenda-card text-left">
                     
                     <h3>¿Para quién es este acompañamiento?</h3>
-                    <p>• Personas que quieren mejorar su salud general a través de la alimentación</p>
-                    <p>• Quienes sienten que tienen “malos hábitos” pero no saben cómo cambiarlos</p>
-                    <p>• Personas con poca organización que necesitan ideas simples y realistas</p>
+                    <p>• Personas que quieren <strong>mejorar su salud general</strong> a través de la alimentación</p>
+                    <p>• Quienes sienten que tienen <strong>“malos hábitos”</strong> pero no saben cómo cambiarlos</p>
+                    <p>• Personas con poca organización que necesitan <strong>ideas simples y sencillas</strong></p>
                     <p>• Quienes desean hacer la transición a una alimentación vegetariana o vegana, 
                         pero no saben cómo empezar o temen hacerlo mal</p>
-                    <p>• Personas que buscan reconectar con su cuerpo, su energía y su relación con la comida</p>
+                    <p>• Personas que buscan <strong>reconectar con su cuerpo, su energía y su relación con la comida</strong> </p>
 
                 </div>
                 
@@ -65,6 +65,14 @@
                     <p><strong>Acompañamiento con encuentro de elaboración de alimentos</strong></p>
                     <p>Incluye 3 encuentros + Recomendaciones + Plan de Alimentación con lista de compras + un encuentro 
                         de elaboración de alimentos + extras.</p>
+                        <br>
+                    <p><strong>Integrar - Alimentación y Yoga</strong></p>
+                    <p>Incluye 3 encuentros online + Recomendaciones + Plan de alimentación con lista de compras + 4 clases 
+                        de yoga (1 semanal) + extras</p>
+                        <br>
+                    <p><strong>Transformar - Alimentación, Yoga y Terapia</strong></p>
+                    <p>Incluye 3 encuentros online + Recomendaciones + Plan de Alimentación con lista de compras + un 
+                        encuentro de elaboración de alimentos + extras</p>
                         <br>
                     <p><strong>Programa Transición Vegetariana/Vegana (2 meses)</strong></p>
                     <p>Ideal si estás cambiando tu alimentación y querés hacerlo bien, 
