--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -40,11 +40,12 @@
                             <li><a href="/pendulo-hebreo">Péndulo hebreo</a></li>
                             <li><a href="/terapia-floral">Terapia floral</a></li>
                             <li><a href="/constelaciones">Constelaciones</a></li>
-                            <li class="has-submenu oculto">
+                            <li class="has-submenu">
                                 <a href="#">Talleres <span class="submenu-arrow"> > </span></a>
                                 <ul class="submenu">
-                                    <li><a href="#ritual-utero">Ritual del útero</a></li>
-                                    <li><a href="#limpieza-energetica">Limpieza energética</a></li>
+                                    <li><a href="/reiki-iniciacion">Iniciación en Reiki</a></li>
+                                    <li class="oculto"><a href="#ritual-utero" >Ritual del útero</a></li>
+                                    <li class="oculto"><a href="#limpieza-energetica">Limpieza energética</a></li>
                                 </ul>
                             </li>
                         </ul>
