--- a/frontend/templates/yoga_gong.html
+++ b/frontend/templates/yoga_gong.html
@@ -17,7 +17,7 @@
         <div class="container-yoga-content">
             <h2 class="yoga-title">Yoga y baño de Gong</h2>
             <p class="yoga-subtitle">Encuentros especiales que combinan la práctica del yoga con el 
-                poder transformador del sonido. Comenzamos con una sesión de Hatha Yoga suave para 
+                poder sanador del sonido y la vibración. Comenzamos con una sesión de Hatha Yoga suave para 
                 preparar el cuerpo y la mente, seguida por un Baño de Gong: una inmersión sonora que te 
                 permite entrar en un estado profundo de relajación, sanación y expansión interior.</p>
                       
