fix cloudinary public_id assignment

--- a/frontend/templates/admin_evento_form.html
+++ b/frontend/templates/admin_evento_form.html
@@ -61,7 +61,7 @@
                     <div class="mb-3">
                         <label class="form-label">Costo</label>
                         <input type="number" step="0.01" name="costo" class="form-control"
-                        value="{{ '' if modo == 'crear' else evento.costo }}">
+                        value="{{ '' if modo == 'crear' else evento.costo }}" required>
                     </div>
 
                     <div class="mb-3">
