--- a/frontend/templates/alimentacion.html
+++ b/frontend/templates/alimentacion.html
@@ -53,33 +53,11 @@
                     <p>• Educación nutricional simple y clara: qué comer, cómo combinar alimentos, qué evitar</p>
                     <p>• Recetarios con ideas fáciles y ricas</p>                    
                     <p>• Seguimientos quincenales o mensuales (según modalidad)</p>
-                </div>
-                
-                <div class="agenda-card text-left">
-                    
-                    <h3>Modalidades disponibles:</h3>
-                    <p><strong>Acompañamiento de 1 mes</strong></p>
-                    <p>Incluye 3 encuentros + Recomendaciones + Plan de Alimentación 
-                        con lista de compras + extras.</p>
-                        <br>
-                    <p><strong>Acompañamiento con encuentro de elaboración de alimentos</strong></p>
-                    <p>Incluye 3 encuentros + Recomendaciones + Plan de Alimentación con lista de compras + un encuentro 
-                        de elaboración de alimentos + extras.</p>
-                        <br>
-                    <p><strong>Integrar - Alimentación y Yoga</strong></p>
-                    <p>Incluye 3 encuentros online + Recomendaciones + Plan de alimentación con lista de compras + 4 clases 
-                        de yoga (1 semanal) + extras</p>
-                        <br>
-                    <p><strong>Transformar - Alimentación, Yoga y Terapia</strong></p>
-                    <p>Incluye 3 encuentros online + Recomendaciones + Plan de Alimentación con lista de compras + un 
-                        encuentro de elaboración de alimentos + extras</p>
-                        <br>
-                    <p><strong>Programa Transición Vegetariana/Vegana (2 meses)</strong></p>
-                    <p>Ideal si estás cambiando tu alimentación y querés hacerlo bien, 
-                        sin carencias y con creatividad.</p>
-                </div>                
+                </div>        
                 
             </div>
+
+            
             
             
            
@@ -87,17 +65,30 @@
     </section>
     
     <section id="enfoque" class="container">
+
+        <div class="contendor-btn-centrado">
+            <div class="info-elements">
+                <a href="/eventos-disponibles?categoria=2" class="btn btn-info">Ver modalidades disponibles</a>
+            </div>
+        </div>
+
+
         <div class="hero-container">
             <div class="hero-content">
+
+                
                 
                 <div class="hero-content-text">
                     <h2>Preguntas frecuentes (FAQ):</h1>
                     <p class="hero-subtitle">
+                        <br>
                         <strong>¿Tengo que ser vegana/o para acceder al asesoramiento?</strong><br>
                         No, acompaño cualquier tipo de alimentación que quiera mejorar desde un enfoque 
                         más natural, equilibrado y respetuoso con el cuerpo.<br>
+                        <br>
                         <strong>¿Necesito cocinar o saber mucho de cocina?</strong><br>
                         ¡No! Te doy herramientas simples y realistas que se adaptan a tu nivel.<br>
+                        <br>
                         <strong>¿Trabajás con patologías?</strong><br>
                         Este es un espacio de bienestar general. Si tenés alguna condición específica, 
                         trabajo en conjunto con tu médica/o o nutricionista clínico si fuera necesario.<br>
