--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -24,6 +24,7 @@
                             <li><a href="/alimentacion">Asesoramiento individualizado</a></li>
                             <li class="oculto"><a href="#recetas">Recetas</a></li>
                             <li><a href="/ebooks">Ebooks</a></li>
+                            <li><a href="/recetas">Recetas</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
