--- a/frontend/templates/recetas.html
+++ b/frontend/templates/recetas.html
@@ -315,6 +315,7 @@
                             <p>Mezclar en un bowl todos los huevos, el aceite, azúcar, miel, canela, jengibre y polvos.</p>
                             <p>Una vez homogéneo, añadir la harina, la zanahoria y almendras picadas por dentro o
                                 por arriba.</p>
+                            <p>LLevar al horno a 180°C por 25 minutos.</p>
                         </div>
                     </div>
                 </div>
