--- a/frontend/templates/limpieza_energetica.html
+++ b/frontend/templates/limpieza_energetica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/static/img/favicon.png">
-    <title>Santolina - Reiki</title>
+    <title>Santolina - Limpieza energética</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -13,28 +13,33 @@
     {% include "partials/header.html" %}
 
     <!-- Sección de Presentación -->
-    <section id="presentacion-alimentacion" class="container-reiki">
+    <section id="presentacion-alimentacion" class="container-limpieza-energetica">
         <div class="container-yoga-content">
-            <h2 class="yoga-title">Iniciación en Reiki</h2>
+            <h2 class="yoga-title">Limpieza Energética</h2>
+            <p class="yoga-subtitle"></p>
+                      
         </div>
     </section>
 
     <section class="container-clases-yoga">
         <div class="container-img-txt">
             <div class="container-img-secondary">
-                <img class="img-secondary" src="/static/img/img-reiki-2.jpg" alt="Reiki">
+                <img class="img-secondary" src="/static/img/img-limpieza-energetica-2.jpg" alt="Reiki">
             </div>
             <div class="container-txt-secondary">
-                    <p class="about-txt"><i class="fa-solid fa-circle-info"></i> Iniciación en Reiki - Nivel 1</p>   
+                    <p class="about-txt"><i class="fa-solid fa-circle-info"></i> Limpieza Energética</p>   
                     <h3 class="info-titulo">Desbloquea tu <span class="color-resaltado">energía</span>.</h3>
-                    <br>
-                    <p class="info-texto">Reiki es una técnica Japonesa ancestral de sanación. 
-                        La energía se transmite por la imposición de las manos del reikista sobre sí 
-                        mismo u otra persona, animal o planta.
+                    <br>                    
+                    <p class="info-texto"><strong>Herramientas de limpieza para sanar</strong></p>
+                    <p class="info-texto">El objetivo de este taller es compartir contigo las herramientas y técnicas 
+                        necesarias para realizar una limpieza energética, eliminando bloqueos emocionales, mentales y 
+                        espirituales, y restaurando el equilibrio en tu energía personal. <br>
+                        Al final del taller, podrás aplicar estas prácticas de manera independiente en 
+                        tu vida diaria.
                         </p>
                         <br>
                     <div class="info-elements">
-                        <a href="/eventos-disponibles?categoria=11" class="btn btn-info">Ver fechas disponibles</a>
+                        <a href="/eventos-disponibles?categoria=23" class="btn btn-info">Ver fechas disponibles</a>
                     </div>
             </div>
         </div>
@@ -50,14 +55,16 @@
                     <div class="program-item">
                         <h2 class="section-title-center">Programa</h2>
                         
-                        <p><i class="fa-solid fa-arrow-right"></i> Historia del Reiki.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Conceptos básicos.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Principios del Reiki.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Sistema de Chakras, sus funciones y características.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Tratamiento (como realizarlo).</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Meditación.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Iniciación.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Práctica.</p>                        
+                        <p><i class="fa-solid fa-arrow-right"></i> Que es la energía.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Importancia de la limpieza.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Cómo nos afecta la misma.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Preparación.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Limpieza y protección personal.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Armado de altar en el hogar.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Símbolos y mudras que potencian nuestra limpieza.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Magia con gemas.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Consejos para la práctica diaria.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Extras (preparado de spray, infusiones, aceites, etc).</p>
                         <br>
                            
 
@@ -68,25 +75,22 @@
                 <div class="program-details">  
                         <div class="program-info-item">
                             <h3><i class="fa-solid fa-circle-info"></i>Más info:</h3>
-                            <h4><i class="fa-solid fa-map-marker-alt"></i> Lugar:</h4>
-                            <p>Montevideo-Maldonado</p>
+                            <h4><i class="fa-solid fa-house-laptop"></i> Modalidad:</h4>
+                            <p>Online</p>
                             <br>
                         
                             <h4><i class="fa-solid fa-inbox"></i> Incluye:</h4>
-                            <p>Manual teórico</p>
-                            <p>Certificado de asistencia</p>
+                            <p>Manual teórico, videos de cada módulo, meditación grabada.</p>
                             <br>
                         
-                            <h4><i class="fas fa-chalkboard-user"></i> Facilita:</h4>
-                            <p>Danae Sosa</p>
+                            <h4><i class="fas fa-user-friends"></i> Facilitan:</h4>
+                            <p>Danae Sosa - Noemí Naranja</p>
                         </div>
                     
                 </div>
             </div>
         </div>
     </section>
-    
-    
 
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
@@ -131,7 +135,7 @@
                     </div>
                     <div class="form-group">
                         <select name="asunto" required>                            
-                            <option value="reiki-iniciacion">Iniciación en Reiki</option>                            
+                            <option value="limpieza-energetica">Limpieza energética</option>                            
                         </select>
                     </div>
                     <div class="form-group">
