--- a/frontend/templates/ritual_utero.html
+++ b/frontend/templates/ritual_utero.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/static/img/favicon.png">
-    <title>Santolina - Reiki</title>
+    <title>Santolina - Ritual del útero</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -13,28 +13,40 @@
     {% include "partials/header.html" %}
 
     <!-- Sección de Presentación -->
-    <section id="presentacion-alimentacion" class="container-reiki">
+    <section id="presentacion-alimentacion" class="container-utero">
         <div class="container-yoga-content">
-            <h2 class="yoga-title">Iniciación en Reiki</h2>
+            <h2 class="yoga-title">Ritual del útero</h2>
+            <p class="yoga-subtitle"></p>
+                      
         </div>
     </section>
 
     <section class="container-clases-yoga">
         <div class="container-img-txt">
             <div class="container-img-secondary">
-                <img class="img-secondary" src="/static/img/img-reiki-2.jpg" alt="Reiki">
+                <img class="img-secondary" src="/static/img/img-ritual-utero-2.jpg" alt="Reiki">
             </div>
             <div class="container-txt-secondary">
-                    <p class="about-txt"><i class="fa-solid fa-circle-info"></i> Iniciación en Reiki - Nivel 1</p>   
-                    <h3 class="info-titulo">Desbloquea tu <span class="color-resaltado">energía</span>.</h3>
-                    <br>
-                    <p class="info-texto">Reiki es una técnica Japonesa ancestral de sanación. 
-                        La energía se transmite por la imposición de las manos del reikista sobre sí 
-                        mismo u otra persona, animal o planta.
-                        </p>
+                    <p class="about-txt"><i class="fa-solid fa-circle-info"></i> Ritual del útero</p>   
+                    <h3 class="info-titulo"><span class="color-resaltado">Sana</span> las memorias del linaje <span class="color-resaltado">femenino</span>.</h3>
+                    <br>                    
+                    <p class="info-texto">El taller consiste en experimentar y compartir dinámicas 
+                        terapéuticas de sanación en relación a experiencias vividas. A través de las
+                        mismas, podrás identificar emociones causantes de miedos, limitaciones y bloqueos 
+                        que no te permiten evolucionar.<br>
+                        <br> 
+                        Muchos de estos bloqueos provienen de memorias ancestrales (linaje femenino) y 
+                        recuerdos de dolor, sufrimiento y sometimiento alojados en nuestro inconsciente.
+                        Realizar este taller sana y reconstruye nuestra energía femenina creadora, sabía 
+                        y luminosa, soltando lo que, sin saberlo, arrastramos de generación en generación.
                         <br>
+                        <br>
+                        Para profundizar este proceso, te llevarás como herramienta un tratamiento de 
+                        sanación energética que se realiza mediante el uso de Huevo de Obsidiana.
+                        </p>
+                    <br>
                     <div class="info-elements">
-                        <a href="/eventos-disponibles?categoria=11" class="btn btn-info">Ver fechas disponibles</a>
+                        <a href="/eventos-disponibles?categoria=22" class="btn btn-info">Ver fechas disponibles</a>
                     </div>
             </div>
         </div>
@@ -50,43 +62,39 @@
                     <div class="program-item">
                         <h2 class="section-title-center">Programa</h2>
                         
-                        <p><i class="fa-solid fa-arrow-right"></i> Historia del Reiki.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Conceptos básicos.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Principios del Reiki.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Sistema de Chakras, sus funciones y características.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Tratamiento (como realizarlo).</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Meditación.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Iniciación.</p>
-                        <p><i class="fa-solid fa-arrow-right"></i> Práctica.</p>                        
+                        <p><i class="fa-solid fa-arrow-right"></i> Por qué cargamos con bloqueos y limitaciones.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Femeneidad y piedra Obsidiana.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Técnica de sanación y limpieza energética a través del uso del huevo de obsidiana.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Meditación profunda para sanar las memorias del linaje femenino.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Dinámica terapéutica de experiencias vivenciales.</p>
+                        <p><i class="fa-solid fa-arrow-right"></i> Limpieza energética con plantas ancestrales.</p>
                         <br>
-                           
+                        <br>    
 
-                        
+                        <h3>El taller incluye:</h3>
+                        <p>Material teórico, huevo de obsidiana, coffee break y certificado de asistencia.</p>
                     </div>                    
                 </div>
                 
                 <div class="program-details">  
                         <div class="program-info-item">
                             <h3><i class="fa-solid fa-circle-info"></i>Más info:</h3>
-                            <h4><i class="fa-solid fa-map-marker-alt"></i> Lugar:</h4>
-                            <p>Montevideo-Maldonado</p>
+                            <h4><i class="fas fa-map-marker-alt"></i> Lugar:</h4>
+                            <p>Montevideo y Maldonado</p>
                             <br>
                         
-                            <h4><i class="fa-solid fa-inbox"></i> Incluye:</h4>
-                            <p>Manual teórico</p>
-                            <p>Certificado de asistencia</p>
+                            <h4><i class="fas fa-clock"></i> Duración aprox:</h4>
+                            <p>4 horas</p>
                             <br>
                         
-                            <h4><i class="fas fa-chalkboard-user"></i> Facilita:</h4>
-                            <p>Danae Sosa</p>
+                            <h4><i class="fas fa-user-friends"></i> Terapeutas Facilitadoras:</h4>
+                            <p>Noemí Naranja y Danae Sosa</p>
                         </div>
                     
                 </div>
             </div>
         </div>
     </section>
-    
-    
 
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
@@ -131,7 +139,7 @@
                     </div>
                     <div class="form-group">
                         <select name="asunto" required>                            
-                            <option value="reiki-iniciacion">Iniciación en Reiki</option>                            
+                            <option value="ritual-utero">Ritual del útero</option>                            
                         </select>
                     </div>
                     <div class="form-group">
