--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -45,8 +45,8 @@
                                 <a href="#">Talleres <span class="submenu-arrow"> > </span></a>
                                 <ul class="submenu">
                                     <li><a href="/reiki-iniciacion">Iniciación en Reiki</a></li>
-                                    <li class="oculto"><a href="#ritual-utero" >Ritual del útero</a></li>
-                                    <li class="oculto"><a href="#limpieza-energetica">Limpieza energética</a></li>
+                                    <li ><a href="/ritual-utero" >Ritual del útero</a></li>
+                                    <li><a href="/limpieza-energetica">Limpieza energética</a></li>
                                 </ul>
                             </li>
                         </ul>
